# convhub

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  LICENSE  QA_REPORT.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TEST_MATRIX.md  docker-compose.yml  roadmap.md
backend/: .coverage  .dockerignore  .env.example  Dockerfile  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_placeholder.py  002_core_models.py  (+31 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_api_ai_accounts.py  test_api_auth.py  test_api_budget_sharing_routing.py  test_api_conversations.py  test_api_workspaces.py  test_branch_manager.py  test_branch_memory.py  test_branch_sync_history.py  test_branch_visualization.py  test_budget_enforcement.py  test_budget_service.py  test_claude_handoff.py  test_coding_workspace.py  test_context_packages.py  test_context_restore.py  test_conversation_branching.py  test_conversation_commits.py  test_conversation_ownership.py  test_credit_calculator.py  test_credit_policy.py  test_credits_api.py  test_decouple_coding_workspace.py  test_demo_mode.py  test_external_ai_sessions.py  test_gateway_enforcement.py  test_mvp_polish.py  test_projects.py  test_provider_factory.py  test_pull_packages.py  test_realtime.py  test_repositories.py  test_repository_memory.py  test_resource_sharing.py  test_routing_policy.py  test_sprint12.py  test_sprint13.py  test_sync_api.py  test_transaction_labels.py  test_transaction_rollback.py  (+3 more)
(+328 files in other folders)
